MFT r64456: Fixed a bug in the Vector skin where personal tools display behind the logo

--- a/skins/vector/main-rtl.css
+++ b/skins/vector/main-rtl.css
@@ -70,6 +70,7 @@ body {
 	#p-personal {
 		position: absolute;
 		top: 0;
+		margin-right: 10em;
 		left: 0.75em;
 	}
 	#p-personal h5 {
